RESOLVED FIXED16370
REGRESSION (r28540): source URL and line number no longer set for outer function/programs
https://bugs.webkit.org/show_bug.cgi?id=16370
Summary REGRESSION (r28540): source URL and line number no longer set for outer funct...
Darin Adler
Reported 2007-12-09 14:58:52 PST
The change to the parser broke the source URL and line number settings for the outer function body in a program. I have a fix.
Attachments
patch (8.41 KB, patch)
2007-12-09 15:21 PST, Darin Adler
mjs: review+
Darin Adler
Comment 1 2007-12-09 15:21:33 PST
Maciej Stachowiak
Comment 2 2007-12-09 18:38:07 PST
Comment on attachment 17809 [details] patch r=me
Darin Adler
Comment 3 2007-12-09 20:06:14 PST
Committed revision 28577.
Note You need to log in before you can comment on or make changes to this bug.