JavaScriptCore/kjs/nodes.cpp
@@ -4402,13 +4402,12 @@ Completion TryNode::execute(ExecState *exec)
 
 FunctionBodyNode::FunctionBodyNode(SourceElements* children)
     : BlockNode(children)
-    , m_sourceURL(lexer().sourceURL())
+    , m_sourceURL(parser().sourceURL())
     , m_sourceId(parser().sourceId())
     , m_initializedDeclarationStacks(false)
     , m_initializedSymbolTable(false)
     , m_optimizedResolveNodes(false)
 {
-  setLoc(-1, -1);
 }
 
 void FunctionBodyNode::initializeDeclarationStacks(ExecState* exec)
